--- a/scss/parciales/_index.scss
+++ b/scss/parciales/_index.scss
@@ -321,6 +321,7 @@
 
             .section-title {
                 grid-area: title;
+                font-size: 2.5rem;
             }
             .automatizacion__header {
                 grid-area: info;
